<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">RealTime</string>
    <string name="text">text</string>
    <string name="welcome_tips">做年轻人爱看的直播</string>
    <string name="tab_home">首页</string>
    <string name="tab_live">直播</string>
    <string name="tab_follw">关注</string>
    <string name="tab_me">我的</string>

    <string name="tab_all">全部</string>

    <string name="search">搜索</string>

    <string name="press_again_to_exit">再按一次退出</string>

    <string name="scoll_aware_fab_behavior">.view.ScollAwareFABBehavior</string>

    <!-- 房间内 -->
    <string name="room_chat">聊天</string>
    <string name="room_ranking">排行</string>
    <string name="room_anchor">主播</string>
    <string name="room_follow">关注</string>
    <string name="hint_room_chat">和主播说点什么…</string>
    <string name="tips_notice_desc">&#160;全民直播提倡绿色直播。封页和直播内容含吸烟，低俗，引诱，暴露等都将被封停账号。网警在线24小时巡查哦。</string>

    <string name="account_">全民号：</string>
    <string name="fans_">粉丝：</string>
    <string name="zhandouli_">战斗力：</string>
    <string name="l">|</string>
    <string name="live_notice">直播公告</string>
    <string name="start_live_time">开播时间</string>
    <string name="personal_information">个人资料</string>
    <string name="age">年龄</string>
    <string name="emotional_state">情感状态</string>
    <string name="location">所在地</string>
    <string name="occupation">职业</string>
    <string name="secrecy">保密</string>
    <string name="outer_space">外太空</string>
    <string name="qm_account">全民号 %1$s</string>
    <string name="fans_num">粉丝 %1$d</string>

    <!-- 我的关注 -->
    <string name="tips_current_not_login">当前未登录</string>
    <string name="btn_follow_click_login">点击登录，精彩不再错过</string>

    <!-- 我的 -->
    <string name="btn_click_login">点击登录</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_starlight">我的星光</string>
    <string name="mine_contribution">星光贡献榜</string>
    <string name="mine_watch">观看历史</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_task">任务中心</string>
    <string name="mine_game">游戏中心</string>
    <string name="mine_setting">设置</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="lable_username_number">用户名/手机号</string>
    <string name="lable_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="third_party_login">第三方登录</string>

    <!-- 推荐 -->
    <string name="recommend">推荐</string>
    <string name="recommend_more">更多</string>

    <!-- 搜索 -->
    <string name="hint_search">请输入主播昵称或房间号</string>
    <string name="tips_search_keywords_cannot_be_empty">搜索关键字不能为空</string>
    <string name="islive">正在直播</string>

    <string name="can_not_find_relevant_content">找不到你想要的内容，换个关键词试试！</string>
    <string name="no_more">没有更多了</string>
    <string name="network_unavailable">网络状态不佳</string>
    <string name="page_load_failed">加载失败…</string>
    <string name="swipe_down_to_refresh">下拉刷新数据</string>

    <string name="current_version_">直播App %1$s</string>
    <string name="about">关于</string>
    <string name="author_">Author:</string>
    <string name="csdn_">CSDN:</string>
    <string name="GitHub_">GitHub</string>

    <string name="author">CodeChenL</string>
    <string name="csdn">http://blog.csdn.net/qq_24058693</string>
    <string name="GitHub">https://github.com/chen635520874</string>

    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="logout">注销</string>
    <string name="register">注 册</string>
    <string name="cancel">取 消</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">用户名或者密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="name_not_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
