<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/title_bg_color">
        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_nav_close_selector"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/title_text_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"/>
        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textColor="@color/bg_red_color"/>
    </LinearLayout>
    <include layout="@layout/line_h"/>
-->
    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="请输入您的用户名"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/line_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:hint="请输入您的密码"
            android:id="@+id/login_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:maxLines="1"
            android:maxLength="20"
            android:background="@null"
            android:inputType="textPassword"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/line_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="60dp"
            android:textSize="@dimen/title_text_size"
            android:background="@drawable/btn_login_selector"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/register"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/title_text_size"
            android:background="@drawable/btn_login_selector"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/login_btn_cancle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/logout"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/title_text_size"
            android:background="@drawable/btn_login_selector"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Login_Remember"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:checked="false"
                android:text="记住密码"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/login_text_change_pwd"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:text="修改密码"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/line_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_login"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="@color/third_party_text_color"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/line_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivQQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_qq_on"
                android:layout_margin="15dp"/>
            <ImageView
                android:id="@+id/ivSina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_sina"
                android:layout_margin="15dp"/>
            <ImageView
                android:id="@+id/ivWeixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_weixin"
                android:layout_margin="15dp"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_success_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15.0px"
        android:layout_marginRight="15.0px"
        android:layout_marginTop="62.0px"
        android:background="#ff3f3f3f"
        android:paddingBottom="10.0px"
        android:paddingTop="21.0px"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_success_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ff3f3f3f"
            android:textSize="20.0dip" />
    </RelativeLayout>

</LinearLayout>